# nano-m0

./: .gitignore  Cargo.toml  README.md  blackmagic.gdb  memory.x
.cargo/: config
cad/: .gitignore  AP2112K-3.3TRG1.lib  AP2112K-3.3TRG1.mod  PTS810_SJM_250_SMTR_LFS.mod  SMT32F070F6P6.lib  fp-lib-table  nano_m0-cache.lib  nano_m0.bak  nano_m0.kicad_pcb  nano_m0.net  nano_m0.sch  nano_m0.v1.kicad_pcb  sym-lib-table
cad/bom/: ibom.html
src/: main.rs
