[package]
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "nano-m0"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-rtfm = "0.4.0"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
heapless = "0.4.0"
generic-array = "0.11.0"
nb = "0.1.1"

[dependencies.stm32f0]
version = "0.5.0"
features = ["stm32f0x0", "rt"]

[dependencies.stm32f0x0-hal]
version = "0.1.8"
path = "../stm32f0x0-hal"
features = ["rt", "unproven", "const-fn"]

# this lets you use `cargo fix`!
[[bin]]
name = "nano-m0"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
